# movie_db_builder

./: pyproject.toml  tmdb.csv
src/: movies.db
src/movie_db_builder/: __main__.py
src/movie_db_builder/db/: db.py  models.py
src/movie_db_builder/notion/: models.py  notion_client.py  notion_config.py
src/movie_db_builder/tmdb/: models.py  tmdb_client.py  tmdb_config.py
