[project]
name = "movie-db-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "typer>=0.20.0",
]

[project.scripts]
db_builder = "movie_db_builder.__main__:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["movie_db_builder"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
